--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: 'build-test'
-on: # rebuild any PRs and main branch changes
+on:
   pull_request:
   push:
     branches:
@@ -7,18 +7,20 @@ on: # rebuild any PRs and main branch changes
       - 'releases/*'
 
 jobs:
-  build: # make sure build/ci work properly
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: |
-          npm install
+          yarn
       - run: |
-          npm run all
-  test: # make sure the action works on a clean machine without building
+          yarn all
+  test:
     runs-on: ubuntu-latest
+    needs: [build]
+    if: always() # can I do this even when it needs: [build]?
     steps:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          milliseconds: 1000
+          github-token: ${{secrets.GITHUB_TOKEN}}
