--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,9 @@ name: 'Your name here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 inputs:
-  milliseconds: # change this
+  github-token:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'probably {{secrets.GITHUB_TOKEN}}'
 runs:
   using: 'node12'
   main: 'dist/index.js'
