--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@actions/github": "^4.0.0"
+    "@actions/github": "^4.0.0",
+    "datadog-metrics": "^0.8.2"
   },
   "devDependencies": {
+    "@types/datadog-metrics": "^0.6.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "@typescript-eslint/parser": "^4.8.1",
     "@vercel/ncc": "^0.25.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "eslint-plugin-github": "^4.1.1",
     "eslint-plugin-jest": "^24.1.3",
