--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: [build]
-    if: always() # can I do this even when it needs: [build]?
+    if: always()
     steps:
       - uses: actions/checkout@v2
       - uses: ./
         with:
+          datadog-api-key: ${{secrets.DATADOG_API_KEY}}
           github-token: ${{secrets.GITHUB_TOKEN}}
