--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'datadog-metrics-reporter'
+description: 'Report CI metrics to datadog'
+author: 'Drew Wyatt <drew.j.wyatt@gmail.com>'
 inputs:
   datadog-api-key:
     required: true
