--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,6 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "arrowParens": "avoid"
 }
