--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,15 @@ jobs:
           yarn
       - run: |
           yarn all
+
+  check_for_artifacts:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          git diff --exit-code
+
   test:
     runs-on: ubuntu-latest
     needs: [build]
@@ -24,4 +33,3 @@ jobs:
       - uses: ./
         with:
           datadog-api-key: ${{secrets.DATADOG_API_KEY}}
-          github-token: ${{secrets.GITHUB_TOKEN}}
