--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - 'releases/*'
 
 jobs:
   build:
@@ -15,13 +14,8 @@ jobs:
           yarn
       - run: |
           yarn all
-
-  check_for_artifacts:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v2
-      - run: |
+      - name: 'Fail if there is a dirty working copy (i.e. we forgot to check in artifacts)'
+        run: |
           git diff --exit-code
 
   test:
@@ -32,4 +26,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
           datadog-api-key: ${{secrets.DATADOG_API_KEY}}
